--- a/CraftBook/Styles/_scroll.scss
+++ b/CraftBook/Styles/_scroll.scss
@@ -6,9 +6,9 @@
     -webkit-border-radius: 5px;
     border-radius: 5px;
 
-    @media (max-width: $size-media-mobile) {
+    /*@media (max-width: $size-media-mobile) {
         display: none;
-    }
+    }*/
 
     ::-webkit-scrollbar-thumb {
         -webkit-border-radius: 5px;
